Fixed project structure
Fixed broken import directives
Added tests for both content and compiled scripts

--- a/package.config
+++ b/package.config
@@ -1,21 +1,27 @@
 {
   "name": "brewery.js",
   "version": "1.0",
-  "author": "Boughpohpue Lukas Kulik"
+  "author": "Boughpohpue Lukas Kulik",
+  "team": "Infertus",
   "domain": "web-development",
   "subdomain": "client-side",
   "category": "utils",
   "group": "javascript",
   "export_as": "class",
   "default_export": "Wizard",
-  "include": [
-    "content/*.js"
+  "requires": [
+    "jxtensions-1.0.1.js",
+    "just.js-1.0.1.js"
   ],
-  "description": "Javascript 'potinos brewery' - magical approach to dynamic objects factory.",
+  "content": [
+    "*.js"
+  ],
+  "description": "Javascript 'potions brewery' - dynamic objects factory from magical point of coding.",
   "tags": [
     "js",
     "javascript",
-	"objects factory",
-    "dynamic objects factory"
+	  "objects factory",
+    "dynamic objects factory",
+    "javascript objects factory"
   ]
 }
